--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,22 +1,28 @@
 <ion-app>
   <ion-split-pane>
-    <ion-menu>
-      <ion-header>
-        <ion-toolbar>
-          <ion-title>Menu</ion-title>
+    <ion-menu style="width: 100%;">
+      <ion-header no-border>
+        <ion-toolbar >
+          <!-- <ion-title>Menu</ion-title> -->
         </ion-toolbar>
       </ion-header>
-      <ion-content>
+      <ion-content scrollY="false">
         <ion-list>
           <ion-menu-toggle auto-hide="false" *ngFor="let p of appPages">
-            <ion-item [routerDirection]="'root'" [routerLink]="[p.url]">
-              <ion-icon slot="start" [name]="p.icon"></ion-icon>
+            <ion-item [routerDirection]="'root'" [routerLink]="[p.url]" lines="none" detail="false">
               <ion-label>
                 {{p.title}}
               </ion-label>
             </ion-item>
           </ion-menu-toggle>
         </ion-list>
+        <ion-footer no-border >
+          <ion-toolbar>
+              <ion-img style="width: 30%;margin: 0 auto;" src="../assets/imgs/agile.svg"></ion-img>
+          </ion-toolbar>
+        </ion-footer>
+          
+       
       </ion-content>
     </ion-menu>
     <ion-router-outlet main></ion-router-outlet>
