--- a/src/app/pages/course/course.page.html
+++ b/src/app/pages/course/course.page.html
@@ -13,7 +13,7 @@
     <ion-title
       text-capitalize="text-capitalize"
       color="m1"
-    >Course</ion-title>
+    >Courses</ion-title>
   </ion-toolbar>
 </ion-header>
 
