--- a/src/app/pages/lesson/lesson.page.html
+++ b/src/app/pages/lesson/lesson.page.html
@@ -11,15 +11,17 @@
     </ion-buttons>
 
     <ion-buttons slot="end">
-      <ion-back-button defaultHref="/"></ion-back-button>
+      <ion-back-button defaultHref="/" color="m1"></ion-back-button>
     </ion-buttons>
 
     <ion-title
       text-capitalize="text-capitalize"
       color="m1"
-    >{{titulo}}</ion-title>
+    >Lesson</ion-title>
   </ion-toolbar>
 </ion-header>
+
+
 
 <!-- <ion-header>
   <ion-toolbar>
@@ -27,7 +29,7 @@
   </ion-toolbar>
 </ion-header> -->
 
-<ion-content id="prueba">
+<ion-content id="">
   <ion-grid>
 
     <ion-row>
@@ -36,13 +38,11 @@
       </ion-col>
     </ion-row>
 
-    <ion-row >
-      <ion-col>
-        <ion-title>Lessons</ion-title>
-      </ion-col>
-  </ion-row>
+  <ion-row id="articlecontent">
+          <ion-col size="12">
+            <ion-title>The Agile Principles</ion-title>
+          </ion-col>
 
-  <ion-row>
       <ion-col size="12">
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam pharetra metus tempor libero malesuada, at eleifend erat auctor. Suspendisse viverra tincidunt finibus. Integer iaculis justo eget aliquam ullamcorper. Suspendisse mattis ante in tristique luctus. Vivamus porttitor maximus arcu. Proin vestibulum ac sem nec dictum. Mauris lacinia leo eu luctus eleifend. 
@@ -50,7 +50,7 @@
           <p>
             In a lobortis dui, sed imperdiet ligula. Donec quis enim sagittis, semper metus et, pulvinar ex. Nulla
           </p>
-          <ion-img src="/assets/shapes.svg"></ion-img>
+          <ion-img src="../assets/imgs/lesson/agileimg.png"></ion-img> 
           <p>
             Vivamus aliquam elit erat, tristique vestibulum libero tempus sed. Aenean ultricies diam ut interdum malesuada. Quisque diam nisi, auctor vitae felis vel, vehicula venenatis mi. Aliquam convallis ex et velit egestas pharetra. Nullam scelerisque, libero id consequat commodo, enim sapien lacinia mi, ut elementum augue dui et odio. Nulla sollicitudin arcu mi, sed pellentesque massa consectetur ut. Suspendisse ultricies tempor risus sed tempus. Proin tempor, odio a sollicitudin hendrerit, lectus lacus aliquam dui, sed fringilla libero justo quis ligula. Ut cursus metus justo, non hendrerit neque mollis sit amet. Sed in ligula ut mi convallis volutpat. Ut at porttitor ex, quis dictum nisl. Morbi ac enim sed felis dictum lobortis. Donec pretium ultrices leo, quis hendrerit leo. Donec posuere urna fringilla accumsan ultricies.
           </p>
