--- a/src/theme/fonts.scss
+++ b/src/theme/fonts.scss
@@ -27,3 +27,18 @@
     font-family: 'IBM Plex Sans Condensed Bold Italic';
     src: url('./fonts/IBMPlexSansCondensed-BoldItalic.ttf');
 }
+
+@font-face{
+    font-family: 'IBM Plex Sans Condensed Medium';
+    src: url('./fonts/IBMPlexSansCondensed-BoldItalic.ttf');
+}
+
+@font-face {
+    src: url("./fonts/IBMPlexSans-Medium.woff2"), url("./fonts/IBMPlexSans-Medium.woff");
+    font-family: 'IBM Plex Sans Medium';
+  }
+
+  @font-face {
+    src: url("./fonts/IBMPlexSans-Regular.woff2"), url("./fonts/IBMPlexSans-Regular.woff");
+    font-family: 'IBM Plex Sans Medium';
+  }
