--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -12,7 +12,7 @@
 
 <ion-content scrollY="false">
   <ion-grid>
-    <ion-row id="agileLogoRow" align-items-center> <!--//align-items-baseline-->
+    <ion-row id="agileLogoRow" align-items-center>
       <ion-col size="12">
         <ion-img src="../assets/imgs/agile.svg"></ion-img>
       </ion-col>
@@ -22,9 +22,6 @@
           (ngSubmit)="onSubmitTemplate()"
         >
           <ion-list>
-            <!-- <ion-list-header>
-              <ion-label>Formulario Template: Valido {{formulario.valid}}</ion-label>
-            </ion-list-header> -->
             <ion-item>
               
               <ion-label position="floating">Email</ion-label>
