--- a/src/app/pages/course/course.page.html
+++ b/src/app/pages/course/course.page.html
@@ -18,13 +18,28 @@
 </ion-header>
 
 <ion-content>
-  <ion-list lines="none"> 
-    <ion-list-header *ngFor="let i of course.modulos; let ind = index">
-      <ion-label>{{i.name}}</ion-label>
-    </ion-list-header>
-    <ion-item *ngFor="let item of course.modulos[0].unidades[0].content">
-      <ion-icon [name]="item.icon" slot="start"></ion-icon>
-      <ion-label>{{item.title}}</ion-label>
+  <ion-list lines="none">
+    <ion-item class="backModule">
+      <ion-label class="module">Module 1</ion-label>
     </ion-item>
+
+    <div class="unitHeader">
+        <ion-list-header class="ion-no-padding">
+            <ion-label class="units ion-text-capitalize">Unit 1</ion-label>
+        </ion-list-header>
+    </div>
+    
+
+     <ion-item class="itemsUnit" *ngFor="let item of course.modulos[0].unidades[0].content">
+      <ion-icon
+        [name]="item.icon"
+        slot="start"
+        [color]="item.color"
+      ></ion-icon>
+
+      <ion-label [color]="item.color">{{item.title}}</ion-label>
+     
+    </ion-item>
+    
   </ion-list>
 </ion-content>
