--- a/src/app/pages/course/course.page.scss
+++ b/src/app/pages/course/course.page.scss
@@ -1,3 +1,43 @@
 ion-menu-button{
-      --color: var(--ion-color-m1);
-  }
+    --color: var(--ion-color-m1);
+}
+
+ion-item{
+    --min-height: 55px;
+}
+
+ion-item.backModule{
+    --background: rgba(174,181,188, 0.1);
+}
+
+.module{
+    color: var(--ion-color-s6);
+    font-weight: bolder;
+    font-size: 18px;
+}
+
+.unitHeader{
+    padding: 0 25px;
+}
+
+.unitHeader ion-list-header{
+    border-bottom: 1px solid var(--ion-color-s1);
+    
+}
+
+.units{
+    font-style: italic;
+    font-size: 16px;
+}
+
+.itemsUnit{
+    --padding-start: 35px;
+}
+
+.selected{
+    border-left: 5px solid;
+}
+
+.unselected{
+
+}
