--- a/src/app/pages/lesson/lesson.page.html
+++ b/src/app/pages/lesson/lesson.page.html
@@ -30,10 +30,10 @@
 </ion-header> -->
 
 <ion-content id="">
-  <ion-grid>
+  <ion-grid class="ion-no-padding">
 
     <ion-row>
-      <ion-col  size="12">
+      <ion-col  size="12" class="ion-no-padding">
         <ion-img src="../assets/imgs/lesson/header1_2x.png"></ion-img>
       </ion-col>
     </ion-row>
