--- a/src/app/pages/dashboard3/dashboard3.page.html
+++ b/src/app/pages/dashboard3/dashboard3.page.html
@@ -11,7 +11,7 @@
     <ion-item lines="none">
       <ion-col no-border="no-border">
         <div class="ion-text-right">
-          <ion-label id="puntos" color="c7"><ion-icon name="medal" class="icono"></ion-icon>1300 pts</ion-label>
+          <ion-label id="puntos" color="c7"><ion-icon mode="ios" name="medal" class="icono"></ion-icon>1300 pts</ion-label>
         </div>
       </ion-col>
     </ion-item>
@@ -24,7 +24,7 @@
     <ion-row>
       <ion-col size="12" class="ion-no-padding">
           <div id="flame">
-            <ion-icon name="flame"></ion-icon>
+            <ion-icon mode="ios" name="flame"></ion-icon>
           </div>
           <ion-progress-bar id="porcentaje" value="0.3" ></ion-progress-bar>
       </ion-col>
@@ -39,7 +39,7 @@
           <img id="imgporfile" src="../../assets/imgs/wen.png" alt="">
         </div>
         <div id="addph">
-          <ion-icon  name="add"></ion-icon>
+          <ion-icon mode="ios" name="add"></ion-icon>
         </div>
       </div>
         <br>
@@ -50,20 +50,20 @@
       </ion-col>
 
       <ion-col size="5" class="rejilla2">
-        <div class="options">
-          <ion-icon class="iconoption" name="bookmarks"></ion-icon><br>
+        <div class="options" [routerLink]="['/lesson']">
+          <ion-icon mode="ios" class="iconoption" name="bookmarks"></ion-icon><br>
           <ion-label>The Agile<br>Principales</ion-label>
         </div>
-        <div class="options">
-          <ion-icon class="iconoption" name="flag"></ion-icon><br>
+        <div class="options" [routerLink]="['/course']">
+          <ion-icon mode="ios" class="iconoption" name="flag"></ion-icon><br>
           <ion-label>Agile Organizations<br>and Method</ion-label>
         </div>
         <div class="options">
-          <ion-icon class="iconoption" name="chatbubbles"></ion-icon><br>
+          <ion-icon mode="ios" class="iconoption" name="chatbubbles"></ion-icon><br>
           <ion-label>Share your<br>results with...</ion-label>
         </div>
         <div class="options ultimaop">
-          <ion-icon class="iconoption" name="calendar"></ion-icon><br>
+          <ion-icon mode="ios" class="iconoption" name="calendar"></ion-icon><br>
           <ion-label>The next<br>Monday</ion-label>
         </div>
       </ion-col>
