--- a/src/app/pages/photo-profile/photo-profile.page.html
+++ b/src/app/pages/photo-profile/photo-profile.page.html
@@ -22,7 +22,7 @@
       <ion-avatar id="img-profile"  >
         <img   src="../../../assets/imgs/wen@2x.png">
       </ion-avatar> 
-      <button  id="add-img-profile">    
+      <button  id="add-img-profile" (click)="takePicture()">    
        <ion-icon style="display:initial"  color="m1" mode="ios"  name="camera"></ion-icon>
       </button >
 
