--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -61,8 +61,9 @@
 
     
   </ion-grid>
+  <!-- <ion-img style="width: 30%;margin: 0 auto;" src="../assets/imgs/logoabinbev.svg" style="position: absolute; width: 100px; bottom:5%; left:35%;"></ion-img>   -->
 </ion-content>
-<ion-footer no-border>
+<ion-footer no-border >
   <ion-toolbar >
     <ion-img id="footImg" src="../assets/imgs/logoabinbev.svg"></ion-img>
   </ion-toolbar>
