--- a/src/app/pages/photo-profile/photo-profile.page.html
+++ b/src/app/pages/photo-profile/photo-profile.page.html
@@ -29,7 +29,7 @@
     </div>
     <ion-row>
       <ion-col size="6" class="ion-padding-horizontal">
-          <button  id="btn-checkmark" style="float:right">    
+          <button  id="btn-checkmark" style="float:right" (click)="acceptPhoto()">    
             <ion-icon style="display:initial"  color="m1" mode="ios"  name="checkmark"></ion-icon>
           </button >
       </ion-col>
