--- a/src/app/pages/photo-profile/photo-profile.page.scss
+++ b/src/app/pages/photo-profile/photo-profile.page.scss
@@ -5,6 +5,7 @@
 }
 #avatar{
     width: 90%;
+    height: 300px;
     margin: auto;
     margin-top: -175px;
     max-width: 300px;
@@ -12,7 +13,7 @@
 #img-profile{
     margin:auto;
     width: 100%;
-    height: auto;
+    height: 300px;
     max-width: 300px;
     border: 1px solid #DA5813;
     padding: 10px;
