--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -31,6 +31,7 @@
                 pattern="^([a-zA-Z0-9_\-\.]+)@([a-zA-Z0-9_\-\.]+)\.([a-zA-Z]{2,5})$"
                 [(ngModel)]="usuario.email"
                 required
+                mode="ios"
       
               ></ion-input>
               
@@ -64,10 +65,3 @@
 
     
   </ion-grid>
-  <!-- <ion-img style="width: 30%;margin: 0 auto;" src="../assets/imgs/logoabinbev.svg" style="position: absolute; width: 100px; bottom:5%; left:35%;"></ion-img>   -->
-<!-- </ion-content>
-<ion-footer no-border >
-  <ion-toolbar >
-    <ion-img id="footImg" src="../assets/imgs/logoabinbev.svg"></ion-img>
-  </ion-toolbar>
-</ion-footer> -->
