--- a/src/app/pages/dashboard3/dashboard3.page.scss
+++ b/src/app/pages/dashboard3/dashboard3.page.scss
@@ -64,11 +64,10 @@ ion-toolbar{
 
 #flame{
     font-size:40px;
-    width: 35%;
-    text-align: right;
     padding: 0px;
     margin: 0px;
     color:  #F55000;
+    margin-right: -15px;
 }
 
 .rejilla{
