--- a/src/app/pages/videoplay/videoplay.page.html
+++ b/src/app/pages/videoplay/videoplay.page.html
@@ -23,6 +23,6 @@
 
 <ion-content>
   <video autoplay controls>
-    <source src="../assets/PortadaAgile_1.mp4" type="video/x-m4v">
+    <source src="../assets/AgileVideo.mp4" type="video/x-m4v">
   </video>
 </ion-content>
