--- a/src/app/pages/lesson/lesson.page.html
+++ b/src/app/pages/lesson/lesson.page.html
@@ -34,13 +34,18 @@
 
     <ion-row>
       <ion-col  size="12" class="ion-no-padding">
-        <ion-img src="../assets/imgs/lesson/header1_2x.png"></ion-img>
+        <ion-img src="../assets/imgs/lesson/header1_2x.png" (click)="openPDF()"></ion-img>
       </ion-col>
     </ion-row>
 
   <ion-row id="articlecontent">
           <ion-col size="12">
-            <ion-title>The Agile Principles</ion-title>
+            <ion-title>The Agile Principles 
+              <ion-button (click)="downloadPDF()" fill="clear" class="ion-no-margin">
+                <ion-icon color="m1" slot="icon-only" name="download"></ion-icon>
+              </ion-button>
+            </ion-title>
+            
           </ion-col>
 
       <ion-col size="12">
