--- a/src/app/pages/infographic/infographic.page.html
+++ b/src/app/pages/infographic/infographic.page.html
@@ -31,7 +31,7 @@
       </ion-col>
 
       <ion-col size="12">
-          <ion-img (click)="openPNG()" src="../assets/imgs/lesson/SCRUMMethodology.png"></ion-img> 
+          <ion-img (click)="viewPhoto()" src="../assets/imgs/lesson/SCRUMMethodology.png"></ion-img> 
       </ion-col>
   </ion-row>
   
