--- a/src/app/pages/lesson/lesson.page.html
+++ b/src/app/pages/lesson/lesson.page.html
@@ -49,11 +49,9 @@
           </ion-col>
 
       <ion-col size="12">
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam pharetra metus tempor libero malesuada, at eleifend erat auctor. Suspendisse viverra tincidunt finibus. Integer iaculis justo eget aliquam ullamcorper. Suspendisse mattis ante in tristique luctus. Vivamus porttitor maximus arcu. Proin vestibulum ac sem nec dictum. Mauris lacinia leo eu luctus eleifend. 
-          </p>
-          <p>
-            In a lobortis dui, sed imperdiet ligula. Donec quis enim sagittis, semper metus et, pulvinar ex. Nulla
+          <p id="l1t1" (dblclick)="playText(TTS[1].data)">
+            {{TTS[1].data}}
+          
           </p>
           <ion-img src="../assets/imgs/lesson/agileimg.png"></ion-img> 
           <p>
